[package]
name = "mmarena"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["memoryapi", "winnt", "sysinfoapi"] }

[target.'cfg(unix)'.dependencies]
libc = { version = "0.2", default-features = false }
